find best force -> fix flickering

--- a/src/components/climate3/climate3.css
+++ b/src/components/climate3/climate3.css
@@ -92,10 +92,10 @@
 }
 
 .bubble-box-climate3-txtbox1 {
-  width: 25%;
   text-align: left;
-  left: 36%;
   top: 45%;
+  width: 450px;
+  left: 37.5%;
 }
 
 .bubble-box-climate3-txtbox2 {
